style: fix board dynamic shifting when elements are cleared

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,7 @@ body {
   display: grid;
   place-items: center;
   min-height: 100vh;
+  min-width: 100vw;
 }
 button {
   border: 0;
@@ -19,7 +20,7 @@ button {
   display: grid;
   place-items: center;
   height: 100%;
-  width: 65%;
+  width: 70%;
   grid-template-rows: 85px auto 60px;
   grid-template-columns: 1fr;
 
@@ -123,12 +124,13 @@ button {
 
 /* Board  elements*/
 .board {
-  width: 100%;
-  height: 100%;
+  width: 600px;
+  height: 600px;
 
   display: grid;
   justify-content: center;
   align-content: center;
+  grid-template-rows: repeat(3, auto);
 
   padding: 3.5rem;
 }
@@ -136,6 +138,7 @@ button {
 .board__row {
   width: 100%;
   height: 100%;
+
   display: grid;
   grid-template-rows: 1fr;
   grid-template-columns: repeat(3, 1fr);
@@ -151,7 +154,7 @@ button {
 
   border: none;
   width: 200px;
-  height: auto;
+  height: 200px;
   text-align: center;
   font-size: 12rem;
   font-weight: var(--font-weight-medium);
